# stowrs

./: Cargo.toml  README.md
examples/: main.rs
src/: errors.rs  file.rs  helpers.rs  lib.rs  storage.rs
src/adapters/: local_file_system_adapter.rs  mod.rs  s3_file_system_adapter.rs
